--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "quickmin",
   "displayName": "quickmin",
+  "type": "module",
   "description": "Minify JS",
   "version": "0.0.1",
   "engines": {
@@ -12,10 +13,12 @@
   "activationEvents": [],
   "main": "./extension.js",
   "contributes": {
-    "commands": [{
-      "command": "quickmin.helloWorld",
-      "title": "Hello World"
-    }]
+    "commands": [
+      {
+        "command": "quickmin.quickmin",
+        "title": "Minify JavaScript"
+      }
+    ]
   },
   "scripts": {
     "lint": "eslint .",
@@ -23,11 +26,14 @@
     "test": "vscode-test"
   },
   "devDependencies": {
-    "@types/vscode": "^1.103.0",
     "@types/mocha": "^10.0.10",
     "@types/node": "22.x",
-    "eslint": "^9.32.0",
+    "@types/vscode": "^1.103.0",
     "@vscode/test-cli": "^0.0.11",
-    "@vscode/test-electron": "^2.5.2"
+    "@vscode/test-electron": "^2.5.2",
+    "eslint": "^9.32.0"
+  },
+  "dependencies": {
+    "terser": "^5.43.1"
   }
 }
