--- a/package.json
+++ b/package.json
@@ -5,18 +5,18 @@
   "description": "Minify JS",
   "version": "0.0.1",
   "engines": {
-    "vscode": "^1.103.0"
+    "vscode": "1.103.0"
   },
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
+  "activationEvents": ["onLanguage:javascript"],
   "main": "./extension.js",
   "contributes": {
     "commands": [
       {
         "command": "quickmin.quickmin",
-        "title": "Minify JavaScript"
+        "title": "Minify JS - (remove logs)"
       }
     ]
   },
@@ -26,14 +26,14 @@
     "test": "vscode-test"
   },
   "devDependencies": {
-    "@types/mocha": "^10.0.10",
+    "@types/mocha": "10.0.10",
     "@types/node": "22.x",
-    "@types/vscode": "^1.103.0",
-    "@vscode/test-cli": "^0.0.11",
-    "@vscode/test-electron": "^2.5.2",
-    "eslint": "^9.32.0"
+    "@types/vscode": "1.103.0",
+    "@vscode/test-cli": "0.0.11",
+    "@vscode/test-electron": "2.5.2",
+    "eslint": "9.32.0"
   },
   "dependencies": {
-    "terser": "^5.43.1"
+    "terser": "5.43.1"
   }
 }
