--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Minify JS",
   "version": "0.0.1",
   "engines": {
-    "vscode": "1.103.0"
+    "vscode": "^1.103.0"
   },
   "categories": [
     "Other"
@@ -16,7 +16,7 @@
     "commands": [
       {
         "command": "quickmin.quickmin",
-        "title": "Minify JS - (remove logs)"
+        "title": "Minify JS"
       }
     ]
   },
